Działa rezerwacja, terminy są sprawdzane poprawnie